--- a/mandela_effect.org
+++ b/mandela_effect.org
@@ -202,7 +202,7 @@ https://www.youtube.com/watch?v=Y1SAWMysMok
 
 
 
-addidas or adidas
+addidas -> adidas
 
 
 
@@ -524,3 +524,27 @@ http://military.china.com/history4/62/20161230/30129561_all.html
 
 word文档编辑：
 注脚－》脚注
+
+
+五十六个民族，五十六枝花
+其实是
+五十六个星座，五十六枝花
+https://www.zhihu.com/question/298785469
+
+
+
+
+
+
+真、直里面是3个横。
+
+很多人记忆里，语文老师教的要么都是2个横，要么就是真2直3。
+
+不要看下面答案，不要看着字认真数。告诉我，“真、具、直”内部分别是几横？<img data-rawwidth="512" data-rawheight="368"
+src="https://pic1.zhimg.com/v2-1959405ee89645dab9190017ea581148_b.jpg" class="origin_image zh-lightbox-thumb"
+width="512" data-original="https://pic1.zhimg.com/v2-1959405ee89645dab9190017ea581148_r.jpg">↓↓正确答案是通通都是三横 
+
+作者：LYL
+链接：https://www.zhihu.com/question/60235732/answer/513219007
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
